--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon --exec babel-node src/app/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -15,5 +16,15 @@
   "bugs": {
     "url": "https://github.com/oudon-mizusawa/obniz-led-aa/issues"
   },
-  "homepage": "https://github.com/oudon-mizusawa/obniz-led-aa#readme"
+  "homepage": "https://github.com/oudon-mizusawa/obniz-led-aa#readme",
+  "dependencies": {
+    "dotenv": "^16.0.3",
+    "obniz": "^3.24.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.20.2",
+    "@babel/node": "^7.20.2",
+    "@babel/preset-env": "^7.20.2",
+    "nodemon": "^2.0.20"
+  }
 }
